--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "onito-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "web-vitals": "^2.1.4",
-    "yup": "^1.1.1"
+    "yup": "^0.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
